--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lab1"]
 	path = lab1
 	url = https://github.com/Aramismas/lab1.git
+[submodule "lab2"]
+	path = lab2
+	url = https://github.com/Aramismas/lab2.git
