--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lab2"]
 	path = lab2
 	url = https://github.com/Aramismas/lab2.git
+[submodule "lab3"]
+	path = lab3
+	url = https://github.com/Aramismas/lab3.git
