--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lab3"]
 	path = lab3
 	url = https://github.com/Aramismas/lab3.git
+[submodule "lab4"]
+	path = lab4
+	url = https://github.com/Aramismas/lab4.git
