--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lab4"]
 	path = lab4
 	url = https://github.com/Aramismas/lab4.git
+[submodule "lab5"]
+	path = lab5
+	url = https://github.com/Aramismas/lab5.git
