--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "lab6"]
 	path = lab6
 	url = https://github.com/Aramismas/lab6.git
+[submodule "lab7"]
+	path = lab7
+	url = https://github.com/Aramismas/lab7.git
