--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "lab7"]
 	path = lab7
 	url = https://github.com/Aramismas/lab7.git
+[submodule "lab8"]
+	path = lab8
+	url = https://github.com/Aramismas/lab8.git
